@@ -1,8 +1,12 @@
 # Overview
-This Java language program is for the course of ***Programming Methodology I***.
+  This Java language program is for the course of ***Programming Methodology I***.
 If you wish to read all the details such as descriptions and implementations, you can open the pdf file named **Programming Methology** provided in this repository.
 
-TLDR - This project is about airline booking system. All codes are implemented using Java programming language. We try to use the core concept of Java, **Object-Oriented Programming /OOP**, to create this application. Moreover, we also use JavaFx to create GUI for this application too.
+## How to open the application
+  If you wish to open the application, you can simply download jar file named **"App.jar"**. Then, you can open either windows powershell or command prompt and run this "java -jar --module-path {fxpath} --add-modules javafx.controls,javafx.graphics,javafx.media,javafx.fxml {filepath}". If you see the login page, then everything is going well. Otherwise, try to check whether you have downloaded JavaFx or not. If you haven't downloaded, then go to this link [JavaFx](https://gluonhq.com/products/javafx/).
+
+## TLDR
+  This project is about airline booking system. All codes are implemented using Java programming language. We try to use the core concept of Java, **Object-Oriented Programming /OOP**, to create this application. Moreover, we also use JavaFx to create GUI for this application too.
 
 ## Used Concept
 - Class / Abstract Class
